--- a/homework-4.Rmd
+++ b/homework-4.Rmd
@@ -210,27 +210,17 @@ Compare your model’s testing accuracy to its average accuracy across folds. De
 log_reg accuracy is bigger than lda and qda. 
 
 ```{r}
-bound_train_data = bind_cols(predict(log_fit, new_data = titanic_train, type = "class"),
-                             predict(lda_fit, new_data = titanic_train, type = "class"),
-                             predict(qda_fit, new_data = titanic_train, type = "class"))
+bound_train_data = bind_cols(predict(log_fit, new_data = titanic_train, type = "class"))
                              
+predict(log_fit, new_data = titanic_test, type = "prob")
 
-colnames(bound_train_data) = c("Log fit", "LDA fit", "QDA fit", "True")
 
 log_reg_acc <- augment(log_fit, new_data = titanic_train) %>%
   accuracy(truth = survived, estimate = .pred_class)
 
 
-lda_acc <- augment(lda_fit, new_data = titanic_train) %>%
-  accuracy(truth = survived, estimate = .pred_class)
-
-
-qda_acc <- augment(qda_fit, new_data = titanic_train) %>%
-  accuracy(truth = survived, estimate = .pred_class)
-
 log_reg_acc
-lda_acc
-qda_acc
+
 ```
 
 
